--- a/onlineshop/src/main/resources/static/css/addresses-styles.css
+++ b/onlineshop/src/main/resources/static/css/addresses-styles.css
@@ -13,6 +13,11 @@ main .addresses-list .address-info {
     border-radius: 1em;
 }
 
+main .addresses-list .address-info p {
+    width: 150px;
+    text-align: left;
+}
+
 main .addresses-list .address-info .town {
     font-weight: 500;
 }
@@ -29,4 +34,18 @@ main .addresses-list .address-info form button[type="submit"] {
 
 main .addresses-list .address-info form button[type="submit"]:hover {
     background-color: #C00;
+}
+
+main .add-address-btn {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    font-weight: 600;
+    margin-top: 1em;
+    padding: 0.5em 1em;
+    width: 15%;
+    align-self: flex-start;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 1.5em;
 }
