Add send email event when making order

--- a/onlineshop/src/main/resources/templates/email/forgot-password-email.html
+++ b/onlineshop/src/main/resources/templates/email/forgot-password-email.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunrise Travel</title>
+    <title>Възстановяване на парола</title>
     <link rel="stylesheet" href="/css/email-styles.css"/>
     <link rel="stylesheet" href="/css/reset.css"/>
 </head>
