--- a/onlineshop/src/main/resources/static/css/email-styles.css
+++ b/onlineshop/src/main/resources/static/css/email-styles.css
@@ -36,6 +36,9 @@ h1:after {
 }
 
 .content {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
     font-size: 16px;
     line-height: 1.2;
     color: #666666;
@@ -59,4 +62,29 @@ a {
     font-weight: 600;
     border-radius: 2em;
     font-size: 14px;
+}
+
+table {
+    width: 100%;
+    margin-top: 1em;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+table tr td img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+table tr th,
+table tr td {
+    border: 1px solid #ccc;
+    padding: 0.2em 0.5em;
+}
+
+table tr th {
+    background-color: #000;
+    color: #fff;
+    border-color: #fff;
 }
