--- a/onlineshop/src/main/resources/templates/add-address.html
+++ b/onlineshop/src/main/resources/templates/add-address.html
@@ -5,7 +5,7 @@
 <head>
     <th:block th:replace="~{fragments/commons::head}"></th:block>
     <link rel="stylesheet" href="/css/add-address-styles.css">
-    <title>Добави промо код</title>
+    <title>Добави адрес</title>
 </head>
 
 <body>
