--- a/onlineshop/src/main/resources/templates/orders.html
+++ b/onlineshop/src/main/resources/templates/orders.html
@@ -6,7 +6,7 @@
 <head>
     <th:block th:replace="~{fragments/commons::head}"></th:block>
     <link rel="stylesheet" href="/css/orders-styles.css">
-    <title>Моите поръчки</title>
+    <title>Поръчки</title>
 </head>
 
 <body>
