--- a/onlineshop/src/main/resources/templates/promo-codes.html
+++ b/onlineshop/src/main/resources/templates/promo-codes.html
@@ -15,7 +15,7 @@
     <main>
         <h1>Промо кодове</h1>
 
-        <p th:if="${warningMessage} and ${#lists.isEmpty(promoCodes.getPromoCodes())}" th:text="${warningMessage}"></p>
+        <p th:if="${warningMessage != null and promoCodes == null}" th:text="${warningMessage}"></p>
 
         <div th:if="${successMessage}" class="alert alert-success" role="alert">
             <p class="success" th:text="${successMessage}"></p>
@@ -25,7 +25,7 @@
             <p th:text="${failureMessage}"></p>
         </div>
 
-        <table>
+        <table th:if="${promoCodes != null}">
             <tr>
                 <th class="code">Промо код</th>
                 <th class="discount-value">Отстъпка</th>
