Add user register event and email sending

--- a/onlineshop/src/main/resources/templates/email/forgot-password-email.html
+++ b/onlineshop/src/main/resources/templates/email/forgot-password-email.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Възстановяване на парола</title>
-    <link rel="stylesheet" href="/css/email-styles.css"/>
-    <link rel="stylesheet" href="/css/reset.css"/>
 </head>
 
 <body>
 
-    <div class="email-container">
-        <h1>Линк за промяна на парола</h1>
+    <div style="padding: 1em 2em; border-radius: 0.5em; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+        <h1 style="text-align: center;">Линк за промяна на парола</h1>
 
-        <div class="content">
-            <p>Здравей, <span th:text="${fullName}">[име]</span>,</p>
+        <div style="font-size: 16px;">
+            <p style="padding-bottom: 0.5em;">Здравей, <span th:text="${fullName}">[име]</span>,</p>
 
-            <p>Получихме заявка за нова парола от твоя имейл (<span th:text="${email}">имейл</span>). Можеш да смениш
-                паролата си след клик върху бутона.</p>
+            <p style="padding-bottom: 1em;">Получихме заявка за нова парола от твоя имейл (<span th:text="${email}">имейл
+                </span>). Можеш да смениш паролата си след клик върху бутона.</p>
 
-            <a th:href="@{'http://localhost:8090/users/reset-password?token=' + ${token}}">Промяна на парола</a>
+            <a style="text-decoration: none; padding: 0.5em 1.5em; background-color: #fff; color: #000; border: 1px solid #ccc;
+                      text-align: center; font-weight: 600; border-radius: 2em; font-size: 14px;
+                      margin-bottom: 3em;"
+               th:href="@{'http://localhost:8090/users/reset-password?token=' + ${token}}">Промяна на парола</a>
 
-            <p>С най-добри пожелания,<br>
+            <p style="margin-top: 1em;">С най-добри пожелания,<br>
                 Екипът на Runtastic Shoes</p>
         </div>
     </div>
