--- a/onlineshop/src/main/resources/static/css/order-success-styles.css
+++ b/onlineshop/src/main/resources/static/css/order-success-styles.css
@@ -5,6 +5,7 @@ main .order-success {
     flex-direction: column;
     align-items: center;
     gap: 1em;
+    text-align: center;
     padding: 2em;
     border-radius: 1em;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
