--- a/onlineshop/src/main/resources/templates/profile.html
+++ b/onlineshop/src/main/resources/templates/profile.html
@@ -21,7 +21,7 @@
             <a class="profile-menu-link" th:href="@{/users/my-orders}">Моите поръчки</a>
             <a class="profile-menu-link" th:href="@{/users/my-addresses}">Моите адреси</a>
             <a class="profile-menu-link" th:href="@{/exchange-or-return}">Замяна или връщане</a>
-            <a class="profile-menu-link" th:href="@{/users/profile/favourites}">Любими</a>
+            <a class="profile-menu-link" th:href="@{/users/favourites}">Любими</a>
             <a class="profile-menu-link" th:href="@{/contacts}">Връзка с нас</a>
         </div>
 
