--- a/onlineshop/src/main/resources/templates/add-opinion.html
+++ b/onlineshop/src/main/resources/templates/add-opinion.html
@@ -5,7 +5,7 @@
 <head>
   <th:block th:replace="~{fragments/commons::head}"></th:block>
   <link rel="stylesheet" href="/css/add-opinion-styles.css">
-  <title>Смяна на парола</title>
+  <title>Напишете мнение</title>
 </head>
 
 <body>
